--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.main.banner-mode= off
 #Conexion
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=test
 spring.datasource.username=javaUser
-spring.datasource.password==javaPass
+spring.datasource.password=javaPass
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=true
@@ -17,3 +17,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # Correcion ruta de archivos estaticos
 spring.mvc.static-path-pattern = /static/**
+
